<resources>
    <string name="app_name">MovieBase</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>

    <string name="popular">Popular</string>
    <string name="most_popular">Most popular movies</string>

    <string name="error_fetch_movies">Please check your internet connection</string>

    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>

    <string name="coming_soon">Coming soon</string>
    <string name="coming_soon_premieres">Be aware of upcoming premieres</string>

</resources>